--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react-boilerplate": "1.1.1",
     "babel-preset-react-hmre": "1.1.1",
+    "bcrypt": "^5.0.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
@@ -93,8 +95,12 @@
     "git-revision-webpack-plugin": "^3.0.6",
     "history": "^4.10.1",
     "image-webpack-loader": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.13",
     "next": "^9.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
@@ -117,6 +123,7 @@
     "string-replace-webpack-plugin": "^0.1.3",
     "tailwindcss": "^1.4.6",
     "terser-webpack-plugin": "^3.0.1",
+    "universal-cookie": "^4.0.4",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
